--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,11 @@ bootRun {
     systemProperty 'spring.profiles.active', 'testdata'
 }
 
+bootBuildImage {
+    imageName = "${project.name}"
+    environment = ["BP_JVM_VERSION" : "17.*", "BP_LOG_LEVEL" : "DEBUG"]
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
