--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com.polarbookshop'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
 description = 'Provides functionality for managing the books in the catalog.'
 
@@ -14,6 +13,10 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+}
+
+java {
+    sourceCompatibility = '17'
 }
 
 repositories {
